# photo-db

./: .dockerignore  .env.docker.example  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  Dockerfile  README.md  build.xml  catalog.xml  docker-compose.dev.yml  docker-compose.yml  manage.py  pdbscanner.py  photodb-ui.py  pyproject.toml  requirements-api.txt  requirements-dev.txt  requirements.txt  test.db  webapi.py
.github/workflows/: ci.yml  release.yml
docs/: ANGULAR_WEB_UI_PROMPT.md  ARCHITECTURE.md  PROJECT_STATUS_AND_PLAN.md  WEB_UI.md  issues.md
nbproject/: build-impl.xml  genfiles.properties  jax-ws.xml  jaxws-build.xml  project.properties  project.xml
photo_db/: app.py  config.py  constants.py  exceptions.py
photo_db/api/: __init__.py  exceptions.py  web_store.py
photo_db/cli/: __init__.py
photo_db/client/: __init__.py  abstract_client.py  local_client.py  web_client.py
photo_db/db/: lean_cache.py  scanner.py  store.py
photo_db/geocoding/: __init__.py  nominatim.py
photo_db/photo/: __init__.py  arw_converter.py  exif_tags.py  orientation.py  parsers.py  photo.py  pil_tags.py  thumbnail.py
photo_db/scanner/: __init__.py  scanner.py
photo_db/store/: logic.py
photo_db/ui/: __init__.py  app.py  filters.py  image_viewer.py  main_window.py  scan_dialog.py  settings_dialog.py  thumbnail_grid.py  (+2 more)
server-conf/: docker-entrypoint.sh  flask-site-nginx.conf  nginx.conf  supervisord.conf  uwsgi.ini
test/: .coveragerc  conftest.py  test_client.py  test_config.py  test_geocoding.py  test_gps.py  test_lean_cache.py  test_naming.py  test_pdbscanner.py  test_photo.py  test_pil_tags.py  test_rotation.py  test_scan_db.py  test_scanner.py  test_store_db.py  test_thumbnail.py  test_ui.py  test_ui_filters.py  test_unit.py  test_web_routes.py
web-ui/: .prettierignore  README.md  angular.json  package-lock.json  package.json  playwright.config.ts  proxy.conf.json
(+58 files in other folders)
