[project]
name = "photo-db"
version = "0.1.3"
description = "Client/server photo library consolidator with client-side duplicate detection"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "python-dotenv>=1.0.1",
    "environs>=11.0",
    "pydantic>=2.9",
    "pillow>=10.4",
    "pillow-heif>=0.18",
    "imagehash>=4.3.1",
    "exifread>=3.0.0",
    "exif>=1.6.0",
    "geopy>=2.4.1",
    "numpy>=2.0",
    "requests>=2.32",
    "piexif>=1.1.3",
]

[project.optional-dependencies]
# Flask HTTP API server side.
api = [
    "flask>=3.0",
    "flask-httpauth>=4.8",
    "werkzeug>=3.0",
]
# Sony .ARW (and similar) RAW photo conversion.
raw = [
    "rawpy>=0.23",
    "imageio>=2.35",
]
# PySide6 (Qt) desktop "thick client" UI - not required for CLI/API use.
ui = [
    "pyside6>=6.7",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "requests-mock>=1.12",
    "ruff>=0.7",
    "pre-commit>=4.0",
]
# Only needed to build standalone desktop-UI binaries in CI (see
# .github/workflows/release.yml) - not a runtime dependency.
build = [
    "pyinstaller>=6.10",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["test"]
markers = [
    "gui: tests that open real desktop GUI windows (excluded by default)",
    "network: tests that hit live third-party network services (not mocked yet, see docs/PROJECT_STATUS_AND_PLAN.md)",
]
addopts = "-m 'not gui and not network'"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.coverage.run]
branch = true
source = ["photo_db"]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
